--- a/style.css
+++ b/style.css
@@ -931,16 +931,16 @@ filter: blur(4px);i
                 text-transform: uppercase;
                 font-family: 'Reddit Mono', monospace;
 
-                div {
+              .scroller  div {
                     margin-block: 4rem;
                 }
 
-                h1 {
+              .scroller  h1 {
                     font-size: 1.25rem;
                     font-weight: 300;
                     margin: 0;
                 }
-                p {
+             .scroller  p {
                     margin: 0;
                     font-size: 1rem;
                     font-weight: 300;
